--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <h2>Tap below to call</h2>
 
-  <a href="tel:+9779841880537">
+  <a href="tel:*31#+9779841880537">
     <button style="font-size:20px; padding:15px 30px;">
       📞 Call Now
     </button>
